<resources>
	<string name="app_name">LessonTestApp</string>
	<string name="txt_basic_info">基本信息</string>
	<string name="txt_name">姓名：</string>
	<string name="txt_height">身高：</string>
	<string name="txt_weight">体重：</string>
	<string name="txt_height_cm">CM</string>
	<string name="txt_weight_kg">KG</string>
	<string name="txt_gender">性别：</string>
	<string name="rb_txt_male">男</string>
	<string name="rb_txt_female">女</string>
	<string name="txt_hobbies">爱好：</string>
	<string name="cb_hobbies_trip">旅游</string>
	<string name="cb_hobbies_sport">运动</string>
	<string name="cb_hobbies_other">其他</string>
	<string name="txt_birth_place">籍贯：</string>
	<string name="btn_txt_yes">确定</string>
	<string name="btn_txt_cancel">取消</string>
	<string name="config_activity_label_add_stranger">添加陌生人</string>
	<string name="txt_study_specialty">所 学 专 业</string>
	<string name="activity_friend_label">好友列表</string>
	<string name="txt_phone">手机：</string>
	<string name="info_layout_txt_name">姓名：</string>
	<string name="info_layout_txt_phone">手机：</string>
	<string name="info_layout_txt_gender">性别：</string>
	<string name="info_layout_txt_birthplace">籍贯：</string>
	<string name="info_layout_txt_profession">专业：</string>
	<string name="txt_is_follow">是否关注：</string>
	<string name="activity_edit_friend_info">编辑好友</string>
	<string name="activity_specialty_setting_label">详细信息</string>
	<string name="menu_friend_list_title_search">搜索</string>
	<string name="menu_friend_list_title_add">添加</string>
	<string name="menu_friend_list_title_stranger">陌生人</string>
	<string name="menu_friend_list_title_inner_storage">内部存储</string>
	<string name="menu_friend_list_title_outer_storage">外部存储</string>
	<string name="menu_friend_list_title_import">导入</string>
	<string name="menu_friend_list_title_export">导出</string>
	<string name="menu_friend_list_title_friends_share">好友分享</string>
	<string name="activity_classmate_friend_label">同学好友</string>
	<string name="activity_label_set_font_size">字体大小</string>
	<string name="menu_friend_list_more_setting">更多设置</string>
	<string name="menu_friend_list_font_size">字体大小</string>
	<string name="activity_set_font_size_text_top">拖动下方的滑条，可以设置 字体的大小。</string>
	<string name="activity_set_font_size_text_preview">预览字体大小</string>
	<string name="activity_set_font_size_text_bottom">设置后，会改变程序中界面中 的字体大小。</string>
	<string name="activity_label_major_setting">专业设置</string>
	<string name="activity_label_my_page">我的主页</string>
</resources>