<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".MainActivity"
		android:orientation="vertical">
	<androidx.appcompat.widget.Toolbar
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:title="编辑信息"
			android:background="?attr/colorPrimary"/>
	<LinearLayout
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="10dp">
		<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

			<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical">

				<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="45dp"
						android:orientation="horizontal">
					<TextView
							android:id="@+id/idTxtName"
							android:layout_width="80dp"
							android:layout_height="match_parent"
							android:text="@string/txt_name"
							android:textSize="25sp"
					/>
					<EditText
							android:id="@+id/idEditInfoNameEditText"
							android:layout_width="200dp"
							android:layout_height="wrap_content"/>
				</LinearLayout>
				<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="45dp"
						android:orientation="horizontal">
					<TextView
							android:id="@+id/idTxtPhone"
							android:layout_width="80dp"
							android:layout_height="match_parent"
							android:text="@string/txt_phone"
							android:textSize="25sp"
					/>
					<EditText
							android:id="@+id/idEditInfoPhoneEditText"
							android:layout_width="200dp"
							android:layout_height="wrap_content"/>
				</LinearLayout>
			</LinearLayout>
			<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="10dp">
				<ImageView
						android:id="@+id/id_edit_info_header_Image_view"
						android:layout_width="80dp"
						android:layout_height="80dp"
						android:src="@mipmap/header06"/>
			</LinearLayout>
		</LinearLayout>


		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="40dp"
				android:orientation="horizontal">
			<TextView
					android:id="@+id/idTxtGender"
					android:layout_width="80dp"
					android:layout_height="match_parent"
					android:text="@string/txt_gender"
					android:textSize="25sp"/>
			<RadioGroup
					android:id="@+id/idEditGenderRadioGroup"
					android:layout_width="300dp"
					android:layout_height="wrap_content"
					android:orientation="horizontal">
				<RadioButton
						android:id="@+id/idEditMaleRB"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/rb_txt_male"
						android:textSize="25sp"
						android:paddingRight="30dp"/>
				<RadioButton
						android:id="@+id/idEditFemaleRB"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/rb_txt_female"
						android:textSize="25sp"/>
			</RadioGroup>
		</LinearLayout>
		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="40dp"
				android:orientation="horizontal">
			<TextView
					android:id="@+id/idTxtHobby"
					android:layout_width="80dp"
					android:layout_height="match_parent"
					android:text="@string/txt_hobbies"
					android:textSize="25sp"/>
			<CheckBox
					android:id="@+id/idEditInfoTripCheckBox"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textSize="25sp"
					android:paddingRight="10dp"
					android:text="@string/cb_hobbies_trip"/>
			<CheckBox
					android:id="@+id/idEditInfoSportCheckBox"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textSize="25sp"
					android:paddingRight="10dp"
					android:text="@string/cb_hobbies_sport"/>
			<CheckBox
					android:id="@+id/idEditInfoOtherCheckBox"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textSize="25sp"
					android:paddingRight="10dp"
					android:text="@string/cb_hobbies_other"/>
		</LinearLayout>
		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="40dp"
				android:orientation="horizontal">
			<TextView
					android:id="@+id/idTxtBrithPlace"
					android:layout_width="80dp"
					android:layout_height="match_parent"
					android:text="@string/txt_birth_place"
					android:textSize="25sp"/>
			<Spinner
					android:id="@+id/idEditInfoProvinceSpinner"
					android:layout_width="200dp"
					android:layout_height="40dp"/>
		</LinearLayout>
		<TextView
				android:id="@+id/idTxtStudySpecialty"
				android:layout_width="match_parent"
				android:layout_height="50dp"
				android:textSize="30sp"
				android:gravity="center_horizontal"
				android:text="@string/txt_study_specialty"/>
		<LinearLayout
				android:id="@+id/idLinearLayout"
				android:layout_width="match_parent"
				android:layout_height="200dp"
				android:orientation="vertical">
			<ListView
					android:id="@+id/idEditInfoListView"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:choiceMode="singleChoice"
					android:listSelector="@drawable/list_view_item_backgroud_selector"/>


		</LinearLayout>
		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="50dp"
				android:orientation="horizontal"
				android:gravity="center_horizontal">
			<Button
					android:id="@+id/idEditInfoYesButton"
					android:layout_width="wrap_content"
					android:layout_height="50dp"
					android:text="@string/btn_txt_yes"
					android:paddingRight="10dp"
					android:textSize="20sp"
					android:onClick="onEditClick"
					tools:ignore="OnClick"/>
			<Button
					android:id="@+id/idEditInfoCancelButton"
					android:layout_width="wrap_content"
					android:layout_height="50dp"
					android:text="@string/btn_txt_cancel"
					android:paddingLeft="10dp"
					android:textSize="20sp"
					android:onClick="onEditClick"
					tools:ignore="OnClick"/>
		</LinearLayout>
	</LinearLayout>
</LinearLayout>