<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".InfoActivityt"
		android:orientation="vertical">
	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
		<androidx.appcompat.widget.Toolbar
				android:id="@+id/id_info_activity_tool_bar"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:title="详细信息"
				android:background="?attr/colorPrimary"
				app:navigationIcon="@drawable/abc_vector_test"/>
	</LinearLayout>
	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="150dp"
				android:orientation="horizontal">
			<LinearLayout
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="3"
					android:orientation="vertical">
				<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="50sp"
						android:orientation="horizontal"
						android:layout_margin="10dp">
					<TextView
							android:layout_width="0dp"
							android:layout_height="match_parent"
							android:layout_weight="2"
							android:text="@string/info_layout_txt_name"
							android:textSize="30sp"
							android:gravity="center_vertical"
					/>
					<TextView
							android:id="@+id/idDetailNameText"
							android:layout_width="0dp"
							android:layout_height="match_parent"
							android:layout_weight="4"
							android:text=""
							android:textSize="27sp"
							android:textColor="#000000"
							android:gravity="center_vertical"/>
				</LinearLayout>
				<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="50sp"
						android:orientation="horizontal"
						android:layout_margin="10dp">
					<TextView
							android:layout_width="0dp"
							android:layout_height="match_parent"
							android:layout_weight="2"
							android:text="@string/info_layout_txt_phone"
							android:textSize="30sp"
							android:gravity="center_vertical"
					/>
					<TextView
							android:id="@+id/idDetailPhoneText"
							android:layout_width="0dp"
							android:layout_height="match_parent"
							android:layout_weight="4"
							android:text=""
							android:textSize="27sp"
							android:textColor="#000000"
							android:gravity="center_vertical"/>
				</LinearLayout>
			</LinearLayout>
			<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginRight="20dp"
					android:layout_marginTop="10dp">
				<ImageView
						android:id="@+id/idDetailHeaderImage"
						android:layout_width="80dp"
						android:layout_height="80dp"
						android:src="@mipmap/header"/>
			</LinearLayout>
		</LinearLayout>

		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="50sp"
				android:orientation="horizontal"
				android:layout_margin="10dp">
			<TextView
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:text="@string/info_layout_txt_gender"
					android:textSize="30sp"
					android:gravity="center_vertical"
			/>
			<TextView
					android:id="@+id/idDetailGenderText"
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="3"
					android:text=""
					android:textSize="27sp"
					android:textColor="#000000"
					android:gravity="center_vertical"/>
		</LinearLayout>
		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="50sp"
				android:orientation="horizontal"
				android:layout_margin="10dp">
			<TextView
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:text="@string/txt_hobbies"
					android:textSize="30sp"
					android:gravity="center_vertical"
			/>
			<TextView
					android:id="@+id/idDetailHobbiesText"
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="3"
					android:text=""
					android:textSize="27sp"
					android:textColor="#000000"
					android:gravity="center_vertical"/>
		</LinearLayout>
		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="50sp"
				android:orientation="horizontal"
				android:layout_margin="10dp">
			<TextView
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:text="@string/info_layout_txt_birthplace"
					android:textSize="30sp"
					android:gravity="center_vertical"
			/>
			<TextView
					android:id="@+id/idDetailProvinceText"
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="3"
					android:text=""
					android:textSize="27sp"
					android:textColor="#000000"
					android:gravity="center_vertical"/>
		</LinearLayout>
		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="50sp"
				android:orientation="horizontal"
				android:layout_margin="10dp">
			<TextView
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:text="@string/info_layout_txt_profession"
					android:textSize="30sp"
					android:gravity="center_vertical"
			/>
			<TextView
					android:id="@+id/idDetailSpecialtyText"
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="3"
					android:text=""
					android:textSize="27sp"
					android:textColor="#000000"
					android:gravity="center_vertical"/>
		</LinearLayout>
	</LinearLayout>


</LinearLayout>