<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
		tools:context=".SetFontSizeActivity"
		android:orientation="vertical">
	<androidx.appcompat.widget.Toolbar
			android:id="@+id/id_font_size_tool_bar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:title="字体大小"
			android:background="?attr/colorPrimary"
			app:navigationIcon="@drawable/abc_vector_test"/>
	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="100dp"
			android:orientation="horizontal">
		<TextView
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_marginLeft="20dp"
				android:layout_marginTop="20dp"
				android:layout_marginRight="20dp"
				android:text="@string/activity_set_font_size_text_top"
				android:textSize="25sp"/>
	</LinearLayout>
	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="100dp"
			android:orientation="horizontal">
		<TextView
				android:id="@+id/idPreviewFontSizeText"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_marginRight="20dp"
				android:gravity="right|center_vertical"
				android:text="@string/activity_set_font_size_text_preview"
				android:textSize="25sp" tools:ignore="RtlHardcoded"/>
	</LinearLayout>
	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="100dp"
			android:orientation="horizontal">
		<TextView
				android:layout_marginLeft="20dp"
				android:layout_marginTop="20dp"
				android:layout_marginRight="20dp"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:text="@string/activity_set_font_size_text_bottom"
				android:textSize="25sp"/>
	</LinearLayout>
	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="100dp"
			android:orientation="vertical"
			android:layout_margin="20dp">
		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="1"
				android:orientation="horizontal">
			<TextView
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:textSize="20sp"
					android:gravity="bottom"
					android:text="小"/>
			<TextView
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:textSize="30sp"
					android:gravity="center|bottom"
					android:text="标准"/>
			<TextView
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:textSize="40sp"
					android:gravity="right"
					android:text="大"/>
		</LinearLayout>

		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="1">
			<SeekBar
					android:id="@+id/idFontSizeSeekBar"
					android:layout_width="match_parent"
					android:layout_height="50dp"
					android:layout_gravity="center"
					android:max="60"
					android:progress="30"/>
		</LinearLayout>

	</LinearLayout>
</LinearLayout>